--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,7 +7,7 @@
   box-sizing: border-box;
 }
 body {
-  background: white;
+  background: rgb(255, 255, 255);
 }
 /* Setting a default font for the entire application */
 
