--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Jost", sans-serif !important;
+    font-family: "Moderustic", sans-serif !important;
   
   }
   
@@ -107,8 +107,8 @@ body {
     text-decoration: none;
     font-size: 16px;
     color: white;
-    font-weight:500;
-    letter-spacing: 1px;
+    font-weight:400;
+    letter-spacing: 0.4px;
     display: block;
     transition: 0.3s;
     margin-bottom:5px;
@@ -230,6 +230,7 @@ body {
     .sidenav {
       width: 15.7%;
     }
+    
   }
   @media screen and (max-width: 990px) {
   .logo2
@@ -259,6 +260,15 @@ body {
       align-items: center;
       gap: 14px;
       padding-left: 15px;
+    }
+    .logo-flx {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-top: 14px;
+        margin-bottom: 10px;
+        padding-left: 10px;
+        padding-right: 10px;
     }
       
   }
