--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -23,7 +23,6 @@ body {
   }
   
   .dropdown-menu {
-      display: none;
       border: none;
       position: static;
       background: transparent;
@@ -37,8 +36,7 @@ body {
       transition: max-height 0.3s ease-in-out, opacity 0.3s ease-in-out;
   }
   
-  .dropdown-menu.show {
-      display: block;
+  .dropdown-menu, .show {
       max-height: 500px; /* Adjust as needed */
       opacity: 1;
       margin-top: 0px;
