working on profile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,7 +7,8 @@
   box-sizing: border-box;
 }
 body {
-  background: rgb(255, 255, 255);
+  background:#f7f9fb;
+
 }
 /* Setting a default font for the entire application */
 
