--- a/src/styles/topbar.css
+++ b/src/styles/topbar.css
@@ -1,8 +1,3 @@
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-}
 
 a {
   color: black;
@@ -13,7 +8,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  padding: 20px;
+  padding: 13px 20px 13px 20px;
   background-color: white;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   gap: 30px;
