--- a/src/styles/adduser.css
+++ b/src/styles/adduser.css
@@ -6,20 +6,21 @@
     margin-top: 40px;
     margin-bottom: 40px;
 }
-.profile-goBack
-{
+
+.profile-goBack {
     position: absolute;
-    top:40px;
-    left:20px;
+    top: 40px;
+    left: 20px;
 
 }
+
 .profile-login_head {
     font-size: 28px;
     color: #000;
     font-weight: 600;
 }
- .profile-back
-{
+
+.profile-back {
     height: 45px;
     background-color: #0052CC;
     color: white;
@@ -29,29 +30,29 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap:10px;
+    gap: 10px;
 }
-.profile-lefticon
-{
+
+.profile-lefticon {
     font-size: 22px;
 }
-.profile-pro1
-{
+
+.profile-pro1 {
     position: relative;
 }
-.profile-profile_img
-{
-    height:100px;
+
+.profile-profile_img {
+    height: 100px;
     background-color: #0052CC;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-bottom: 25px;
 }
-.profile-inner_circle
-{
+
+.profile-inner_circle {
     height: 70px;
-    width:70px;
+    width: 70px;
     background-color: white;
     color: #0052CC;
     font-size: 35px;
@@ -60,22 +61,25 @@
     align-items: center;
     border-radius: 50%;
 }
+
 .profile-inputContainer {
     position: relative;
-  }
-  
-  .profile-inputField {
+}
+
+.profile-inputField {
     font-size: 16px;
-  }
-  
-  .profile-icon {
+}
+
+.profile-icon {
     position: absolute;
     right: 10px;
     top: 50%;
     transform: translateY(-50%);
-    pointer-events: none; /* Make sure the icon does not block input clicks */
-  }
-  .profile-submit_bot1 {
+    pointer-events: none;
+    /* Make sure the icon does not block input clicks */
+}
+
+.profile-submit_bot1 {
     height: 38px;
     color: #fff;
     background-color: #0052cc;
@@ -85,42 +89,89 @@
     padding-right: 25px;
     font-weight: 500;
 }
+
 .login_head {
     font-size: 28px;
     color: #000;
     font-weight: 600;
 }
-.avtar
+.h3_head
 {
+    font-size: 25px;
+
+}
+.avtar {
     width: 120px;
     border-radius: 50%;
     margin-bottom: 15px;
 }
-.basic
-{
+
+.basic {
     font-size: 19px;
-    color:rgb(191, 45, 130);
+    color: rgb(191, 45, 130);
     font-weight: 500;
 }
-.info1
-{
-    color:#6e829f;
-}
-b{
-    color:black;
+
+.info1 {
+    color: #6e829f;
 }
 
-  @media(max-width:1100px)
-  {
+b {
+    color: black;
+}
+
+.my_form_signup_profile {
+    padding: 30px;
+    background-color: white;
+    box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
+    border-radius: 10px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    margin-left: 3%;
+    /* margin-right: 3%; */
+}
+.my_profile {
+    padding: 30px;
+    background-color: white;
+    box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
+    border-radius: 10px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    margin-left: 2%;
+    margin-right: 3%;
+}
+.side_padd
+{
+    padding-left: 3%;
+    padding-right: 3%;
+    margin-top: 70px;
+}
+.submit_bot1 {
+    height: 38px;
+    color: #fff;
+    background-color: #0052cc;
+    border: none;
+    border-radius: 8px;
+    padding-left: 25px;
+    padding-right: 25px;
+    font-weight: 500;
+}
+.line
+{
+    height: 2px;
+    background-color: #505050;
+    border:none
+}
+
+@media(max-width:1100px) {
     .profile-goBack {
         position: absolute;
         top: 40px;
         left: 30px;
     }
-  }
-  
-  @media(max-width:994px)
-  {
+}
+
+@media(max-width:994px) {
     .profile-my_form_signup_profile {
         padding: 30px;
         background-color: white;
@@ -129,34 +180,58 @@ b{
         margin-top: 86px;
         margin-bottom: 40px;
     }
+
     .profile-goBack {
         position: static;
         margin-top: 22px;
     }
-  }
-  @media(max-width:980px)
-  {
+}
+
+@media(max-width:980px) {
     .profile-goBack {
         position: static;
         top: 40px;
         left: 10px;
     }
-  }
-  @media(max-width:747px)
-  {
+    .my_form_signup_profile {
+        margin-left: auto;
+    }
+    .my_profile {
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .side_padd {
+        padding-left: 3%;
+        padding-right: 3%;
+        margin-top: 0px;
+    }
+    .my_form_signup_profile {
+        padding: 30px;
+        background-color: white;
+        box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
+        border-radius: 10px;
+        margin-top: 30px;
+        margin-bottom: 0px;
+        
+    }
+}
+
+@media(max-width:747px) {
     .profile-my_form_signup_profile {
         margin-top: 30px;
     }
+
     .profile-goBack {
-        
+
         margin-top: 25px;
     }
+
     .profile-back {
         height: 38px;
+        width:38px;
         background-color: #0052CC;
         color: white;
-        width: auto;
-        padding-left: 10px;
+        padding-left: 15px;
         padding-right: 15px;
         border: none;
         border-radius: 8px;
@@ -166,9 +241,11 @@ b{
         gap: 5px;
         font-size: 14px;
     }
+
     .profile-lefticon {
         font-size: 19px;
     }
+
     .profile-submit_bot1 {
         height: 38px;
         color: white;
@@ -180,5 +257,4 @@ b{
         font-weight: 500;
         font-size: 14px;
     }
-  }
-  
+}
