--- a/src/styles/reportone.css
+++ b/src/styles/reportone.css
@@ -4,7 +4,22 @@
   align-items: center;
   gap: 15px;
 }
-
+.deactivee1
+{
+  background-color: #c5222254;
+    color: #c32323;
+    font-size: 12px;
+    padding: 2px 5px 2px 5px;
+    border-radius: 4px;
+}
+.activee1
+{
+  background-color: #22c55c2e;
+    color: #22c55e;
+    font-size: 12px;
+    padding: 2px 5px 2px 5px;
+    border-radius: 4px;
+}
 .admin-a_buton>.admin-Add_icon {
   height: 42px;
   width: 42px;
@@ -123,10 +138,12 @@
 }
 
 .admin-credit_table {
-  box-shadow: 0 0 11px -2px hsla(223, 3%, 58%, .4);
+  box-shadow: 0 0 8px -2px hsl(0deg 0% 75.28% / 40%);
   padding: 25px 25px 25px 25px;
   margin-top: 40px;
   margin-bottom: 30px;
+  background-color: white;
+  border-radius: 8px;
 }
 
 .admin-credit_head,
@@ -199,14 +216,55 @@
 }
 
 td {
-  font-size: 14px;
+  font-size: 14.6px;
 }
 
 th {
 
   font-size: 14px;
 }
+.My-View
+{
+  background-color: #0052CC;
+  color: white;
+  border:none;
+  padding-left: 17px;
+  padding-right: 17px;
+  height: 30px;
+  border-radius: 6px;
+  font-size: 14px;
+}
+.down_load
+{
+  color:#0052CC;
+}
+@media(max-width:900px) {
 
+  .admin-credit_head, .admin-credit_head2 {
+    font-size: 28px;
+    color: #000;
+    font-weight: 600;
+    margin-bottom: 15px;
+}
+.admin-fsearch-container {
+  position: relative;
+  width: 275px;
+  /* margin-top: 20px; */
+  z-index: 10;
+}
+.admin-under_filters {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  flex-wrap: wrap;
+  margin-top: 15px;
+}
+.admin-sider_comp {
+  padding-left: 3%;
+  padding-right: 3%;
+}
+}
 @media(max-width:600px) {
   .admin-reportone_flx {
     display: block !important;
