--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -36,7 +36,7 @@ body {
       transition: max-height 0.3s ease-in-out, opacity 0.3s ease-in-out;
   }
   
-  .dropdown-menu, .show {
+  .dropdown-menu, .show2 {
       max-height: 500px; /* Adjust as needed */
       opacity: 1;
       margin-top: 0px;
@@ -92,7 +92,7 @@ body {
   .sidenav {
     height: 100vh;
     position: fixed;
-    z-index: 1;
+    z-index: 31;
     top: 0;
     left: 0;
     background-color: #111c43;
@@ -262,7 +262,7 @@ body {
     }
     .sidenav .closebtn {
       position: absolute;
-      top: -11px;
+      top: 9px;
       right: 10px;
       font-size: 30px;
       margin-left: 50px;
@@ -274,13 +274,15 @@ body {
       align-items: center;
       gap: 14px;
       padding-left: 15px;
+      margin-bottom: 20px;
+        margin-top: 15px;
     }
     .logo-flx {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        margin-top: 14px;
-        margin-bottom: 10px;
+        margin-top: 16px;
+        margin-bottom: 14px;
         padding-left: 10px;
         padding-right: 10px;
     }
